[project]
name = "paylink-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.9.4",
    "nest-asyncio>=1.6.0",
    "paylink-tracing>=0.1.0",
    "pymongo[srv]>=4.13.0",
    "python-json-logger>=3.3.0",
]
